2.3/deploy_nginxtool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxtool
  labels:
    app: nginxtool
spec:
  selector:
    matchLabels:
      app: nginxtool
  template:
    metadata:
      labels:
        app: nginxtool
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
          name: cm-index
        ports:
        - containerPort: 80
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 1080
      volumes:
      - name: cm-index
        configMap:
          name: nginx-index
