2.3/svc_nginxtool.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxtool-svc
spec:
  type: NodePort
  selector:
    app: nginxtool
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      nodePort: 30080
